<?xml version="1.0"?>
<package>
  <name>robotis_math</name>
  <version>0.0.0</version>
  <description>
    The robotis_math package
    This package is a set of basic math fuctions for ROBOTIS's robots.
    We provide some linear algebra and trajectory generation funntions and classes.
  </description>

  <maintainer email="sch@robotis.com">sch</maintainer>
  <license>BSD</license>
   
  <author email="sch@robotis.com">sch</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>

</package>