<?xml version="1.0"?>
<package>
  <name>robotis_math</name>
  <version>0.2.0</version>
  <description>
    This package is a set of basic math fuctions for ROBOTIS's robots.
    We provide some linear algebra and trajectory generation funntions and classes.
  </description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Math/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Math</url>
  <url type="website">http://wiki.ros.org/robotis_math</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <export></export>
</package>
